--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,17 @@
-version: '3'
+version: '3.8'
 
 services:
-  tracker-app:
+  app:
     build:
       context: .
-    container_name: tracker-application
-    ports:
+    container_name: my-app
+    expose:
       - 5000
+    
     volumes:
       - .:/app/
+
+networks:
+  default:
+    name: dev
+    external: true
