--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,9 @@ services:
   app:
     build:
       context: .
+    
+    # networks:
+    #   - flaskapp_net
     container_name: my-app
     expose:
       - 5000
@@ -11,7 +14,19 @@ services:
     volumes:
       - .:/app/
 
-networks:
-  default:
-    name: dev
-    external: true
+# networks:
+#   default:
+#     name: net
+#     external: true
+
+# networks:
+#   net:
+#     driver: macvlan
+#     # enable_ipv6: true                   # if needed
+#     driver_opts:
+#       parent: ens33
+#     ipam:
+#       config:
+#         - subnet: 192.168.0.0/24
+#           gateway: 192.168.0.1
+#           ip_range: 192.168.0.8/30
