--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,18 +4,18 @@ services:
   app:
     build:
       context: .
-    container_name: my-app
+    container_name: app
     expose:
       - 5000
     networks:
-      - net
+      - net1
     
     volumes:
       - .:/app/
 
 
 networks:
-  net:
+  net1:
     driver: macvlan
     # enable_ipv6: true                   # if needed
     driver_opts:
@@ -25,8 +25,8 @@ networks:
       config:
         - subnet: 192.168.226.0/24
           gateway: 192.168.226.2
-          ip_range: 192.168.226.8/30
+          ip_range: 192.168.226.10/30
   default:
-      name: net
+      name: net1
       external: true
 
